test_yuriiq/catalog/language/german/affiliate/forgotten.php
<?php

// text
$_['text_account']	= 'Konto';
$_['text_forgotten']	= 'Passwort vergessen';
$_['text_success']	= 'Ein neues Passwort wurde an Ihre Email Adresse gesendet.';
$_['text_email']	= 'Bitte die dem Konto zugeordnete Emailadresse eintragen und mit Klick auf "Weiter" bestätigen. Es wird dann umgehend ein neues Passwort an diese Emailadresse gesendet.';
$_['text_your_email']	= 'Meine Emailadresse';

// error
$_['error_email']	= 'Die Emailadresse ist unbekannt. Bitte erneut versuchen!';

// entry
$_['entry_email']	= 'Emailadresse:';

// heading
$_['heading_title']	= 'Passwort vergessen ?';
?>